STM-CUBE-IDE/.metadata/.plugins/org.eclipse.cdt.ui/STM32407G_TwiceSquareV2.build.log
13:03:47 **** Incremental Build of configuration Debug for project STM32407G_TwiceSquareV2 ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../USB_HOST/App -I../USB_HOST/Target -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/ST/STM32_USB_Host_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Host_Library/Class/CDC/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:69:9: warning: ISO C99 requires whitespace after the macro name
   69 | #define gResult[arraysize] = {0};
      |         ^~~~~~~
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:69:16: error: expected expression before '[' token
   69 | #define gResult[arraysize] = {0};
      |                ^
../Core/Src/main.c:109:11: note: in expansion of macro 'gResult'
  109 |           gResult[i] = i*i*2;
      |           ^~~~~~~
../Core/Src/main.c:109:18: error: expected expression before '[' token
  109 |           gResult[i] = i*i*2;
      |                  ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:383:1: error: expected identifier or '(' before '}' token
  383 | }
      | ^
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

13:03:47 Build Failed. 4 errors, 1 warnings. (took 292ms)

